@@ -30,6 +30,7 @@ size_t u_list_count(u_list_t *list);
 void* u_list_get_n(u_list_t *list, size_t n);
 void* u_list_first(u_list_t *list, void**);
 void* u_list_next(u_list_t *list, void**);
+int u_list_clear(u_list_t *list);
 
 #ifdef __cplusplus
 }
